--- a/ADBLESK/ADBLESK/Base.lproj/Main.storyboard
+++ b/ADBLESK/ADBLESK/Base.lproj/Main.storyboard
@@ -275,7 +275,7 @@
                                                 <rect key="frame" x="0.0" y="28" width="250" height="60"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wYQ-VV-C55" id="BmP-fV-k0X">
-                                                    <rect key="frame" x="0.0" y="0.0" width="250" height="59"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="250" height="59.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="FMG01" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LV6-oh-Hwa">
@@ -532,7 +532,7 @@
                             </view>
                         </barButtonItem>
                         <view key="titleView" contentMode="scaleToFill" id="5ez-1p-rM1">
-                            <rect key="frame" x="134" y="22" width="147" height="60"/>
+                            <rect key="frame" x="133.5" y="22" width="147" height="60"/>
                             <autoresizingMask key="autoresizingMask"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Aa6-q2-TP4" customClass="ADSKNavItemButton">
@@ -2967,10 +2967,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view hidden="YES" alpha="0.0" contentMode="scaleToFill" horizontalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="WZ6-K0-o63">
-                                <rect key="frame" x="30" y="-6" width="354" height="122.66666666666667"/>
+                                <rect key="frame" x="30" y="-36" width="354" height="122.66666666666667"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4GO-3h-Uxf">
-                                        <rect key="frame" x="161" y="45.333333333333329" width="33" height="32.999999999999986"/>
+                                        <rect key="frame" x="161" y="45.333333333333336" width="33" height="33.000000000000007"/>
                                         <color key="backgroundColor" red="0.99215686270000003" green="0.50196078430000002" blue="0.1019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="33" id="6So-ph-jyP"/>
@@ -2985,7 +2985,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H0L-hz-pwQ">
-                                        <rect key="frame" x="204" y="45.333333333333329" width="33" height="32.999999999999986"/>
+                                        <rect key="frame" x="204" y="45.333333333333336" width="33" height="33.000000000000007"/>
                                         <color key="backgroundColor" red="0.99215686270000003" green="0.50196078430000002" blue="0.1019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                         <state key="normal" title="2">
@@ -2996,7 +2996,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uAY-Be-s4l">
-                                        <rect key="frame" x="245" y="45.333333333333329" width="33" height="32.999999999999986"/>
+                                        <rect key="frame" x="245" y="45.333333333333336" width="33" height="33.000000000000007"/>
                                         <color key="backgroundColor" red="0.99215686270000003" green="0.50196078430000002" blue="0.1019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                         <state key="normal" title="3">
@@ -3007,7 +3007,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KYU-62-QFm">
-                                        <rect key="frame" x="286" y="45.333333333333329" width="33" height="32.999999999999986"/>
+                                        <rect key="frame" x="286" y="45.333333333333336" width="33" height="33.000000000000007"/>
                                         <color key="backgroundColor" red="0.99215686270000003" green="0.50196078430000002" blue="0.1019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                         <state key="normal" title="4">
@@ -3070,10 +3070,10 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" horizontalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="HB2-P7-hTo">
-                                <rect key="frame" x="30" y="136.66666666666669" width="354" height="122.66666666666669"/>
+                                <rect key="frame" x="30" y="106.66666666666666" width="354" height="122.66666666666666"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g0p-KT-5Iz">
-                                        <rect key="frame" x="191" y="42.333333333333343" width="64" height="38"/>
+                                        <rect key="frame" x="191" y="42.333333333333329" width="64" height="38"/>
                                         <color key="backgroundColor" red="0.99215686274509807" green="0.50196078431372548" blue="0.10196078431372549" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="38" id="hYl-te-kyk"/>
@@ -3087,7 +3087,7 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="DYp-bl-PnP">
-                                        <rect key="frame" x="38" y="18" width="143" height="86.666666666666686"/>
+                                        <rect key="frame" x="38" y="18" width="143" height="86.666666666666671"/>
                                         <attributedString key="attributedText">
                                             <fragment>
                                                 <string key="content">Temperature
@@ -3119,7 +3119,7 @@ Unit</string>
                                         </variation>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r8f-MB-q5P">
-                                        <rect key="frame" x="272" y="43" width="64" height="38"/>
+                                        <rect key="frame" x="272" y="42.999999999999986" width="64" height="38"/>
                                         <color key="backgroundColor" red="0.99215686270000003" green="0.50196078430000002" blue="0.1019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="38" id="DRr-jy-WqZ"/>
@@ -3149,10 +3149,10 @@ Unit</string>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" horizontalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="yXU-Yh-aOx">
-                                <rect key="frame" x="30" y="279.33333333333326" width="354" height="122.66666666666669"/>
+                                <rect key="frame" x="30" y="249.33333333333337" width="354" height="122.66666666666663"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tdY-cR-lIc">
-                                        <rect key="frame" x="38" y="8" width="89.666666666666657" height="106.66666666666669"/>
+                                        <rect key="frame" x="38" y="7.9999999999999716" width="89.666666666666657" height="106.66666666666669"/>
                                         <attributedString key="attributedText">
                                             <fragment content="Alarm Type">
                                                 <attributes>
@@ -3180,7 +3180,7 @@ Unit</string>
                                         </variation>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O8u-dw-FeM">
-                                        <rect key="frame" x="147.66666666666663" y="43.333333333333371" width="186.33333333333337" height="36"/>
+                                        <rect key="frame" x="147.66666666666663" y="43.333333333333343" width="186.33333333333337" height="36"/>
                                         <color key="backgroundColor" red="0.99215686270000003" green="0.50196078430000002" blue="0.1019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="20"/>
                                         <state key="normal" title="Ring">
